// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches snapshot (logged in) 1`] = `
<DocumentFragment>
  <nav
    class="Navbar"
  >
    <a
      aria-current="page"
      class="Navbar-header active"
      href="/"
    >
      Reptifeed
    </a>
    <div>
      <a
        class="Navbar-option"
        href="/users/1/reptiles"
      >
        My Reptiles
      </a>
      <a
        class="Navbar-option"
        href="/users/1/pantry"
      >
        My Pantry
      </a>
      <a
        class="Navbar-option"
        href="/users/1"
      >
        My Account
      </a>
      <a
        aria-current="page"
        class="Navbar-option active"
        href="/"
      >
        Log out
      </a>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`it matches snapshot (logged out) 1`] = `
<DocumentFragment>
  <nav
    class="Navbar"
  >
    <a
      aria-current="page"
      class="Navbar-header active"
      href="/"
    >
      Reptifeed
    </a>
    <div>
      <a
        class="Navbar-option"
        href="/login"
      >
        Login
      </a>
      <a
        class="Navbar-option"
        href="/register"
      >
        Register
      </a>
    </div>
  </nav>
</DocumentFragment>
`;
